Fix: Set length to be 2-exponent and remove CKPT

--- a/notebooks/edited_audio_diffusion_pytorch_trainer_v0_2 .ipynb
+++ b/notebooks/edited_audio_diffusion_pytorch_trainer_v0_2 .ipynb
@@ -406,7 +406,7 @@
         "TRAIN_CMD = f'{true_root}/{repo_dir}/train.py'\n",
         "EXPERIMENT_CMD = f'exp={EXPERIMENT}'\n",
         "PATH_CMD = '' if isYouTube else f'++datamodule.dataset.path={true_root}/{custom_data_path}'\n",
-        "CKPT = \"2023-09-26-19-58-27\"\n",
+        "CKPT = \"\"\n",
         "CKPT_CMD = f'+ckpt={true_root}/{custom_log_path}/ckpts/{CKPT}/last.ckpt' if CKPT else ''\n",
         "\n",
         "\n",
